--- a/index.html
+++ b/index.html
@@ -60,22 +60,7 @@
 <main id="main">
 
 	<div class="container">
-		
-		<div class="row section topspace">
-			<div class="col-md-12">
-				<p class="lead text-center text-muted">Versatile full stack coder at the intersection of web development and design, with nearly 10 years of experience as a menswear designer, developing creative consumer focused, cost-effective product and the proven ability to oversee the strategy and growth of product categories.</p>
-			</div>
-		</div> <!-- / section -->
-		
-		<div class="row section featured topspace">
-			<h2 class="section-title"><span>TECHNICAL SKILLS</span></h2>
-			<div class="row">
-			  <div class="col-xs-12">
-					<img class="logos" src="assets/images/allicons_small.png" alt="Icon Img">
-				</div>
-			</div>
-				<div id="recent_works"></div> <!-- JUMP TO LINK FOR RECENT WORKS -->
-		</div> <!-- / section -->
+
 		 
 		<div class="row section recentworks">
 			
@@ -183,15 +168,10 @@
 		<div class="row section topspace bottomspace">
 			<div class="panel panel-cta"><div class="panel-body">
 				<div class="col-lg-8">
-					<p>A simple, nice-looking <b>call to action box</b>. Boxing is about respect. getting it for yourself, 
-					and taking it away from the other guy. no, this is mount everest. </p>
+					<img class="logos" src="assets/images/allicons_small.png" alt="Icon Img">
 				</div>
-				<div class="col-lg-4 text-right">
-					<a href="http://www.gettemplate.com/downloads/initio.zip " class="btn btn-primary btn-lg">Download template</a>
-				</div>
-			</div></div>
-
-	</div>	<!-- /container -->
+			</div>
+	  </div>
 
 </main>
 
@@ -211,7 +191,7 @@
 			</div>
 
 			<div class="col-md-3 widget">
-				<h3 class="widget-title">Text widget</h3>
+				<h3 class="widget-title">About Me</h3>
 				<div class="widget-body">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
