--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Megan Gilpin Portfolio</title>
 	
 
-	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
+	<!-- <link rel="shortcut icon" href="assets/images/lightbulb1.jpeg"> -->
 	
 	<!-- Bootstrap -->
 	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
 				
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="#recent_works">RECENT WORKS</a></li>
+					<!-- <li><a href="#recent_works">RECENT WORKS</a></li> -->
 					<li><a href="resume.html">RESUME</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 
@@ -165,13 +165,14 @@
 			
 		</div> <!-- /section -->
 
-		<div class="row section topspace bottomspace">
-			<div class="panel panel-cta"><div class="panel-body">
-				<div class="col-lg-8">
-					<img class="logos" src="assets/images/allicons_small.png" alt="Icon Img">
-				</div>
-			</div>
-	  </div>
+				<div class="row section featured topspace">
+					<h2 class="section-title"><span>TECHNICAL SKILLS</span></h2>
+					<div class="row">
+						<div class="col-xs-12">
+							<img class="logos" src="assets/images/allicons_small.png" alt="Icon Img">
+						</div>
+					</div>
+				</div> <!-- / section -->
 
 </main>
 
@@ -182,10 +183,10 @@
 				<h3 class="widget-title">Follow me</h3>
 				<div class="widget-body">
 					<p class="follow-me-icons">
-						<a href=""><i class="fa fa-twitter fa-2"></i></a>
-						<a href=""><i class="fa fa-dribbble fa-2"></i></a>
-						<a href=""><i class="fa fa-github fa-2"></i></a>
-						<a href=""><i class="fa fa-facebook fa-2"></i></a>
+						<!-- <a href=""><i class="fa fa-twitter fa-2"></i></a>
+						<a href=""><i class="fa fa-dribbble fa-2"></i></a> -->
+						<a href="https://github.com/megangilpin" target="_blank"><i class="fa fa-github fa-2"></i></a>
+						<!-- <a href=""><i class="fa fa-facebook fa-2"></i></a> -->
 					</p>
 				</div>
 			</div>
@@ -193,10 +194,17 @@
 			<div class="col-md-3 widget">
 				<h3 class="widget-title">About Me</h3>
 				<div class="widget-body">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, nihil natus explicabo ipsum quia iste aliquid repellat eveniet velit ipsa sunt libero sed aperiam id soluta officia asperiores adipisci maxime!</p>
+					<p>Versatile and creative menswear designer with a passion for innovation. Proven ability to oversee the strategy and growth of product categories through an excellent understanding of global market needs and product development.</p>
 				</div>
 			</div>
+
+						<div class="col-md-3 widget">
+							<br><br>
+							<div class="widget-body">
+								<p>
+									Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines and within cross functional teams. Have a look for yourself by cliking on the link to my fashion design portfolio: <a id="portfolio" href="https://www.megangilpin.com/">www.megangilpin.com</a></p>
+							</div>
+						</div>
 
 		</div> <!-- /row of widgets -->
 	</div>
