--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="thumbnails recentworks row">
 				<!-- Project 2 -->
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="http://guestlisterapp.com">
+					<a class="thumbnail" href="http://guestlisterapp.com" target="_blank">
 						<span class="img shadow_effect" >
 							<img src="assets/images/guestLister_small.png" alt="App Img">
 							<span class="cover"><span class="more">See More &rarr;</span></span>
@@ -82,7 +82,7 @@
 				 
 				<!-- Project 1 -->
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="https://crumbs-243103.firebaseapp.com">
+					<a class="thumbnail" href="https://crumbs-243103.firebaseapp.com" target="_blank">
 						<span class="img shadow_effect">
 							<img src="assets/images/crumbs2.png" alt="App Img">
 							<span class="cover"><span class="more">See More &rarr;</span></span>
@@ -95,7 +95,7 @@
 
 				<!-- Friend Finder -->
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<a class="thumbnail" href="https://secure-citadel-28458.herokuapp.com/">
+					<a class="thumbnail" href="https://secure-citadel-28458.herokuapp.com/" target="_blank">
 						<span class="img shadow_effect">
 							<img src="assets/images/friendFinder.png" alt="App Img">
 							<span class="cover"><span class="more">See More &rarr;</span></span>
