--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Megan Gilpin Portfolio</title>
+	<title>Megan Gilpin</title>
 	
 
 	<!-- <link rel="shortcut icon" href="assets/images/lightbulb1.jpeg"> -->
