--- a/home.html
+++ b/home.html
@@ -63,30 +63,32 @@
       </div>
     </section> -->
 
-    <div class="album py-5 bg-light">
+    <div class="album py-5">
       <div class="container">
 
         <h2 class="section-title text-center"><span>Recent Work</span></h2>
 
-        <!------------------ Hover Effect Style : Demo - 16 --------------->
         <div class="container mt-40">
 
         <div class="row">
 
           <div class="col-md-4">
 
-            <div class="card mb-4 box-shadow">
+            <div class="card bg-transparent border-0 mb-4">
               <div class="hover_container">
-                <img class="hover_image card-img-top" src="assets/images/guestLister_small.png"
-                  alt="Card image cap">
+
+                <img class="hover_image card-img-top card_shadow" src="assets/images/guestLister_small.png"
+                  alt="GuestList Img">
                 <div class="overlay">
-                  <p class="hover_text">See More</p>
+                  <p><a class="hover_text" href="http://guestlisterapp.com" target="_blank">See More &rarr;</a></p>
                 </div>
               </div>
               <div class="card-body">
                 <p class="card-title text-center">Crumbs</p>
                 <p class="card-text text-center">Full Stack app for a sample way to plan an event</p>
-                <p class="text-center">Icon Here</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/Project-2" target="_blank"><i class="justify-content-center icon fa fa-github fa-2"></i></a>
+                </div>
               </div>
             </div>
             
