added google font

--- a/home.html
+++ b/home.html
@@ -12,7 +12,11 @@
 
   <!-- Icons -->
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    
+
+  <!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600|Roboto:100,300,400,700&display=swap"
+  rel="stylesheet">
+
   <!-- Custom styles -->
   <link rel="stylesheet" href="assets/css/style2.css">
 
@@ -68,15 +72,14 @@
 
         <h2 class="section-title text-center"><span>Recent Work</span></h2>
 
-        <div class="container mt-40">
+        <div class="container">
 
         <div class="row">
 
+          <!-- Project 2 -->
           <div class="col-md-4">
-
             <div class="card bg-transparent border-0 mb-4">
               <div class="hover_container">
-
                 <img class="hover_image card-img-top card_shadow" src="assets/images/guestLister_small.png"
                   alt="GuestList Img">
                 <div class="overlay">
@@ -84,130 +87,162 @@
                 </div>
               </div>
               <div class="card-body">
-                <p class="card-title text-center">Crumbs</p>
+                <p class="card-title text-center">GuestLister</p>
                 <p class="card-text text-center">Full Stack app for a sample way to plan an event</p>
                 <div class="d-flex justify-content-center">
                   <a href="https://github.com/megangilpin/Project-2" target="_blank"><i class="justify-content-center icon fa fa-github fa-2"></i></a>
                 </div>
               </div>
             </div>
-            
           </div>
 
+          <!-- Project 1 -->
           <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/crumbs2.png" alt="Crumbs Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://crumbs-243103.firebaseapp.com" target="_blank">See More &rarr;</a></p>
                 </div>
               </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
+                <p class="card-title text-center">Crumbs</p>
+                <p class="card-text text-center">Full Stack app that helps you find a recipe using ingredients in your fridge</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/Project-1" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
+          <!-- Friend Finder -->
           <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/friendFinder.png" alt="Friend Finder Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://secure-citadel-28458.herokuapp.com/" target="_blank">See More &rarr;</a></p>
+                </div>
+              </div>
               <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
+                <p class="card-title text-center">Friend Finder</p>
+                <p class="card-text text-center">Full Stack compatibility-based friend finder app</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/Friend-Finder" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Sandwich -->
           <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/whichSandwich.png" alt="Sandwich Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://fast-fortress-18955.herokuapp.com/" target="_blank">See More &rarr;</a>
+                  </p>
+                </div>
+              </div>
               <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
+                <p class="card-title text-center">Which Sandwich?</p>
+                <p class="card-text text-center">Restaurant app that lets users input the names of sandwich they'd like to eat</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/Sandwich" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Trivia Game -->
           <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail"
-                alt="Card image cap">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/triviaGame.png" alt="TriviaGame Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://megangilpin.github.io/Trivia-Game/" target="_blank">See More &rarr;</a>
+                  </p>
+                </div>
+              </div>
               <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
+                <p class="card-title text-center">NYC Trivia Game</p>
+                <p class="card-text text-center">Timed game using jQuery, setTimeout() and setInterval() methods</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://megangilpin.github.io/Trivia-Game/" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Giphy App -->
+          <div class="col-md-4">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/giphyAPI_small.png" alt="Giphy Api Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://megangilpin.github.io/GiphyAPI/" target="_blank">See More &rarr;</a>
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-title text-center">Get Giphy</p>
+                <p class="card-text text-center">References the Giphy API then dynamically displays the gifs on the page</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/GiphyAPI" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Jewel Collector Game -->
+          <div class="col-md-4">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/jewelCollectorGame.png" alt="JewelCollectorGame Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://megangilpin.github.io/Jewel-Collector/" target="_blank">See More &rarr;</a>
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-title text-center">Jewel Collector Game</p>
+                <p class="card-text text-center">Created with JQuery, CSS and Bootstrap</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/Jewel-Collector" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Word Guess Gage -->
+          <div class="col-md-4">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/wordguessGame.png" alt="WordGuessGam Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://megangilpin.github.io/WordGuessGame/" target="_blank">See More
+                      &rarr;</a>
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-title text-center">WORD GUESS GAME</p>
+                <p class="card-text text-center">Created with Javascript, CSS and Bootstrap</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/WordGuessGame" target="_blank"><i
+                      class="justify-content-center icon fa fa-github fa-2"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
