--- a/home.html
+++ b/home.html
@@ -251,12 +251,22 @@
 
   <footer class="text-muted">
     <div class="container">
-      <p class="float-right">
-        <a href="#">Back to top</a>
-      </p>
-      <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting
-          started guide</a>.</p>
+      <div class="row">
+        <div class="col-md-3 widget mx-4">
+          <h3 class="footer-title">Follow me</h3>
+          <div class="footer-body">
+              <a class="footer-icon icon" href="https://github.com/megangilpin" target="_blank"><i class="fa fa-github fa-2"></i></a>
+          </div>
+      </div>
+    
+      <div class="col-md-8 widget">
+        <h3 class="footer-title">About Me</h3>
+        <div class="footer-body">
+          <p>Versatile and creative menswear designer with a passion for innovation. Proven ability to oversee the strategy
+            and growth of product categories through an excellent understanding of global market needs and product
+            development.</p>
+        </div>
+      </div>
     </div>
   </footer>
 
