--- a/home.html
+++ b/home.html
@@ -44,9 +44,9 @@
      
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="container d-flex flex-column flex-md-row justify-content-center">
-            <a class="nav py-2 mx-3 d-sm-inline-block" href="index.html">HOME</a>
-            <a class="nav py-2 mx-3 d-sm-inline-block" href="resume.html">RESUME</a>
-            <a class="nav py-2 mx-3 d-sm-inline-block" href="contact.html">CONTACT</a>
+            <a class="nav py-2 mx-4 d-sm-inline-block" href="index.html">HOME</a>
+            <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Tech_Resume.pdf" target="_blank">RESUME</a>
+            <a class="nav py-2 mx-4 d-sm-inline-block" href="contact.html">CONTACT</a>
           </div>
         </div>
 
@@ -257,6 +257,8 @@
           <div class="footer-body">
               <a class="footer-icon icon" href="https://github.com/megangilpin" target="_blank"><i class="fa fa-github fa-2"></i></a>
           </div>
+          <br>
+          <a class="top-link" href="#">Back to top</a>
       </div>
     
       <div class="col-md-8 widget">
