--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="container d-flex flex-column flex-md-row justify-content-center">
-            <a class="nav py-2 mx-4 d-sm-inline-block" href="index.html">HOME</a>
+            <a class="nav py-2 mx-4 d-sm-inline-block" href="#recent_works">RECENT WORK</a>
             <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Tech_Resume.pdf" target="_blank">RESUME</a>
             <a data-toggle="modal" href=".bd-example-modal-lg" class=" nav py-2 mx-4 d-sm-inline-block">CONTACT</a>
           </div>
@@ -115,7 +115,7 @@
       </div>
     </section>
 
-    <div class="album my-5">
+    <div class="album" id="recent_works">
       <!-- section header -->
       <div class="container">
         <h2 class="section-title text-center"><span>Recent Work</span></h2>
