--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/css/style2.css">
 
   <title>Megan Gilpin Portfolio</title>
+
 </head>
 
 <body class="home">
@@ -105,8 +106,8 @@
   <main role="main">
     <!-- technical skills -->
     <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading technical-title">Technical Skills</h1>
+      <div class="container skills">
+        <h1 class="jumbotron-heading technical-title"><i class="arrow fas fa-chevron-left"></i>Technical Skills<i class="arrow fas fa-chevron-right"></i></h1>
         <div class="row">
           <div class="col-xs-12">
             <img class="logos" src="assets/images/allicons_small.png" alt="Icon Img">
@@ -118,7 +119,7 @@
     <div class="album" id="recent_works">
       <!-- section header -->
       <div class="container">
-        <h2 class="section-title text-center"><span>Recent Work</span></h2>
+        <h2 class="section-title text-center"><span><i class="arrow fas fa-chevron-left"></i>Recent Work<i class="arrow fas fa-chevron-right"></i></span></h2>
       <div class="container">
         <div class="row">
           <!-- Project 2 -->
