added reset css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   rel="stylesheet">
 
   <!-- Custom styles -->
-  <link rel="stylesheet" href="assets/css/style2.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <title>Megan Gilpin Portfolio</title>
 
