--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
             </div>
           </div>
 
-          <!-- Word Guess Gage -->
+          <!-- Word Guess Game -->
           <div class="col-md-4">
             <div class="card bg-transparent border-0 mb-4">
               <div class="hover_container">
-                <img class="hover_image card-img-top card_shadow" src="assets/images/wordguessGame.png" alt="WordGuessGam Img">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/wordGuessGame.png" alt="WordGuessGame Img">
                 <div class="overlay">
                   <p><a class="hover_text" href="https://megangilpin.github.io/WordGuessGame/" target="_blank">See More
                       &rarr;</a>
