--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
-  <title>Megan Gilpin Portfolio</title>
+  <title>Megan Gilpin</title>
 
 </head>
 
