--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
           <h3 class="footer-title">Follow me</h3>
           <div class="footer-body">
               <a class="footer-icon icon" href="https://github.com/megangilpin" target="_blank"><i class="fab fa-github"></i></a>
+              <a class="footer-icon icon" href="https://www.linkedin.com/in/megan-gilpin/" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
     
@@ -310,9 +311,10 @@
         <div class="footer-body">
           <p>Versatile and creative menswear designer with a passion for innovation. Proven ability to oversee the strategy
             and growth of product categories through an excellent understanding of global market needs and product
-            development.Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines and
-            within cross functional teams. Have a look for yourself by cliking on the link to my fashion design portfolio: <a
-              id="portfolio" href="https://www.megangilpin.com/">www.megangilpin.com</a></p>
+            development.
+            <br> <br>
+            Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines and
+            within cross functional teams. Have a look for yourself by cliking on the link to my fashion design portfolio: <a class="portfolio" href="https://www.megangilpin.com/">www.megangilpin.com</a></p>
         </div>
       </div>
     </div>
