--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             development.
             <br> <br>
             Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines and
-            within cross functional teams. Have a look for yourself by cliking on the link to my fashion design portfolio: <a class="portfolio" href="https://www.megangilpin.com/">www.megangilpin.com</a></p>
+            within cross functional teams. Have a look for yourself by clicking on the link to my fashion design portfolio: <a class="portfolio" href="https://www.megangilpin.com/">www.megangilpin.com</a></p>
         </div>
       </div>
     </div>
