--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   <footer class="text-muted mt-100">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 widget mx-4">
+        <div class="col-md-3 widget mx-3 mb-3">
           <h3 class="footer-title">Follow me</h3>
           <div class="footer-body">
               <a class="footer-icon icon" href="https://github.com/megangilpin" target="_blank"><i class="fab fa-github"></i></a>
@@ -306,7 +306,7 @@
           </div>
         </div>
     
-      <div class="col-md-8 widget">
+      <div class="col-md-8 widget mx-3">
         <h3 class="footer-title">About Me</h3>
         <div class="footer-body">
           <p>Versatile and creative menswear designer with a passion for innovation. Proven ability to oversee the strategy
@@ -314,7 +314,7 @@
             development.
             <br> <br>
             Highly skilled communicator and project manager who works well in fast-paced environments with tight deadlines and
-            within cross functional teams. Have a look for yourself by clicking on the link to my fashion design portfolio: <a class="portfolio" href="https://www.mgilpindesign.com/">www.megangilpin.com</a></p>
+            within cross functional teams. Have a look for yourself by clicking on the link to my fashion design portfolio: <a class="portfolio" href="https://www.mgilpindesign.com/">www.mgilpindesgin.com</a></p>
         </div>
       </div>
     </div>
