--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
         
             <p>
-              ...or leave your message below and I will be back to you as soon as possible.
+              ...or leave your message below and I will get back to you as soon as possible.
             </p>
         
             <form class="contact-form d-flex flex-column align-items-center" action="https://formspree.io/megangilpin@gmail.com"
@@ -96,7 +96,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="container d-flex flex-column flex-md-row justify-content-center">
             <a class="nav py-2 mx-4 d-sm-inline-block" href="#recent_works">RECENT WORK</a>
-            <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Tech_Resume.pdf" target="_blank">RESUME</a>
+            <a class="nav py-2 mx-4 d-sm-inline-block" href="assets/files/Megan_Gilpin_Developer_Resume.pdf" target="_blank">RESUME</a>
             <a data-toggle="modal" href=".bd-example-modal-lg" class=" nav py-2 mx-4 d-sm-inline-block">CONTACT</a>
           </div>
         </div>
