--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <h1 id="logo" class="text-center">
         <!-- <img class="img-circle" src="assets/images/lightbulb3.png" alt=""> -->
         <span class="title">MEGAN GILPIN</span>
-        <span class="tagline">Versatile full stack coder <br>
-          at the intersection of web development and design</span>
+        <span class="tagline">Versatile full stack engineer <br>
+          at the intersection of functionality and design</span>
       </h1>
     </div>
     
