--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
   <header id="header">
 
-    <div id="head" class="parallax" parallax-speed="2">
+    <div id="head" class="parallax img-fluid" parallax-speed="2">
       <h1 id="logo" class="text-center">
         <!-- <img class="img-circle" src="assets/images/lightbulb3.png" alt=""> -->
         <span class="title">MEGAN GILPIN</span>
