added clicky game

--- a/index.html
+++ b/index.html
@@ -162,6 +162,27 @@
             </div>
           </div>
 
+          <!-- Clicky Game -->
+          <div class="col-md-4">
+            <div class="card bg-transparent border-0 mb-4">
+              <div class="hover_container">
+                <img class="hover_image card-img-top card_shadow" src="assets/images/colorClick.png" alt="Friend Finder Img">
+                <div class="overlay">
+                  <p><a class="hover_text" href="https://clicky-m-game.herokuapp.com/" target="_blank">See More &rarr;</a>
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-title text-center">Color Click Game</p>
+                <p class="card-text text-center">React based memory game</p>
+                <div class="d-flex justify-content-center">
+                  <a href="https://github.com/megangilpin/Clicky-Game" target="_blank"><i
+                      class="justify-content-center icon fab fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- Friend Finder -->
           <div class="col-md-4">
             <div class="card bg-transparent border-0 mb-4">
